force-app/main/default/objects/EventChangeNotification__e/EventChangeNotification__e.object-meta.xml
<CustomObject>
    <label>EventChangeNotification</label>
    <pluralLabel>EventChangeNotifications</pluralLabel>
</CustomObject>