force-app/main/default/objects/EventChangeNotification__e/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <label>Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>