force-app/main/default/objects/EventChangeNotification__e/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <label>Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>