force-app/main/default/objects/EventChangeNotification__e/fields/EventParameter__c.field-meta.xml
<CustomField>
    <fullName>EventParameter__c</fullName>
    <label>Event Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>